--- a/style.css
+++ b/style.css
@@ -10,54 +10,125 @@
     font-family: 'Righteous', cursive;
 }
 
+.content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 0rem;
+    padding-top: 3rem;
+}
+
 h2{
-    margin: 3rem;
-    background-color: rgb(114, 219, 237);
-    letter-spacing: 0.2rem;
-    border: 2px solid black;
-    width: 16rem;
-    padding: 0.5rem;
+    margin: 2rem -2rem 2rem 0rem;
+    font-size: 2rem;
+    letter-spacing: 0.3rem;
+    width: 70vw;
+    margin: 2rem;
+    border-radius: 5px;
+    text-shadow: 2px 3px rgb(141, 141, 141);
+    /* width: 20rem; */
+    padding: 1rem;
+    box-shadow: 2px 2px 20px 1px rgb(195, 195, 195) ;
+
+}
+
+.options{
+    width: 21rem;
+    height: 25rem;
+    display: flex;
+    margin: 1rem;
+    flex-direction: column;
+    justify-content: space-between;
+    align-self: center;
+    border-radius: 5px;
+    padding: 3rem;
+    box-shadow: 2px 2px 20px 1px rgb(195, 195, 195) ;
 }
 
 .pixelspace{
-    width : 30rem;
-    height: 20rem;
-    border: 2px solid black;
-    position: absolute;
-    top: 50px;
-    right: 100px;
-    display: flex;
+    width : 27.5rem;
+    display: inline-flex;
     flex-wrap: wrap;
+    align-self: center;
+    box-shadow: 2px 2px 20px 1px rgb(195, 195, 195) ;
 }
 
 .input{
-    width: 10rem;
+    width: 12rem;
     height: 2.5rem;
-    margin: 3rem;
     padding: 0.5rem;
     outline: none;
     border: 2px solid black;
     font-size: 1rem;
+    border-radius: 5px;
+    background-color: white;
 }
 
 .pixels{
     width: 2.5rem;
     height: 2.5rem;
-    border: 1px solid black;
 }
 
-.clear{
-
-    width: 10rem;
+.erase{
+    width: 12rem;
     height: 2.5rem;
-    margin: 3rem;
     padding: 0.5rem;
     outline: none;
     border: 2px solid black;
     font-size: 1rem;
+    cursor: pointer;
+    border-radius: 5px;
+    background-color: white;
 
+}
+
+.clear{
+    width: 12rem;
+    height: 2.5rem;
+    padding: 0.5rem;
+    outline: none;
+    border: 2px solid black;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 5px;
+    background-color: white;
+}
+
+.random{
+    width: 12rem;
+    height: 2.5rem;
+    padding: 0.5rem;
+    outline: none;
+    border: 2px solid black;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 5px;
+    background-color: white;
+}
+
+.favcolor{
+    width: 12rem;
+    height: 2.5rem;
+    padding: 0.5rem;
+    outline: none;
+    border: 2px solid black;
+    cursor: pointer;
+    border-radius: 5px;
+    background-color: white;
 }
 
 .colorpixel{
     background-color: rgb(49, 136, 229);
+}
+
+footer > p{
+    margin-top: 5rem;
+    margin-left: 3rem;
+    font-size: 20px;
+    padding: 1rem;
+    color: white;
+    background-color: rgb(114, 113, 113);
+    letter-spacing: 0.1rem;
+    width: 20rem;
 }
